# metrics

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yaml
metrics/: __init__.py  __main__.py  consts.py  containers.py  utils.py
metrics/entity/: __init__.py  issues.py
metrics/repository/: __init__.py  base.py  converter.py  jira.py  utils.py
metrics/services/: __init__.py  base.py  calculator.py  metrics.py  vis.py
tests/: conftest.py  test_calculator.py  test_cli.py  test_converter.py  test_issues.py  test_jira.py  test_metrics.py  test_repository_utils.py  test_vis.py
